2008-11-03  kitone  <kitone@gna.org>

	* configure.in:
	New value PACKAGE_PLUGIN_DIR.

	* src/Extension.cc:
	* src/Extension.h:
	* src/ExtensionInfo.cc:
	* src/ExtensionInfo.h:
	* src/ExtensionManager.cc:
	* src/ExtensionManager.h:
	* src/Makefile.am:
	New files, introduce a new extension system.

2008-11-03  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-11-02  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.26.0 release.

2008-11-02  kitone  <kitone@gna.org>

	* src/FileWriter.h:
	* src/Subtitle.cc:
	Fix: bug #12542 (https://gna.org/bugs/?12542)
	Unable to build Subtitleeditor 0.25.0

2008-10-30  kitone  <kitone@gna.org>

	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/SubStationAlpha.h:
	Fix: ASS/SSA newline (patch by Robert Ramiega)

2008-10-29  kitone  <kitone@gna.org>

	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/SubStationAlpha.h:
	Add a default style if the document doesn't 
	at least one when the file is saved.

2008-10-28  kitone  <kitone@gna.org>

	* src/formats/MicroDVD.h:
	Fix: MicrDVD to SE tags conversion.

2008-10-27  kitone  <kitone@gna.org>

	* TODO:
	Update.

2008-10-27  kitone  <kitone@gna.org>

	* configure.in:
	* src/Makefile.am:
	Remove pcre dependance.

	* src/actions/FindAndReplace.cc:
	Using GRegex instead of pcre.

2008-10-27  kitone  <kitone@gna.org>

	* TODO:
	Update.

2008-10-27  kitone  <kitone@gna.org>

	* configure.in:
	Remove pcrecpp dependance.

	* src/Makefile.am:
	Remove RegEx* and testRegEx.cc files.
	
	* src/RegEx.cc:
	* src/RegEx.h:
	* src/unittest/testRegEx.cc:
	Remove files.

2008-10-27  kitone  <kitone@gna.org>

	* src/actions/FindAndReplace.cc:
	Remove RegEx. (hack)

2008-10-26  kitone  <kitone@gna.org>

	* src/main.cc:
	Remove unused header RegEx.h.

2008-10-24  kitone  <kitone@gna.org>

	* src/actions/CombineSubtitles.cc:
	Remove unused header RegEx.h.

	* src/actions/SplitSubtitle.cc:
	Using Glib::Regex instead of RegEx.
