@@ -1,5 +1,12 @@
 2008-11-03  kitone  <kitone@gna.org>
 
+	* src/Makefile.am:
+	* src/extension/Action.cc:
+	* src/extension/Action.h:
+	New file, Action extension.
+
+2008-11-03  kitone  <kitone@gna.org>
+
 	* configure.in:
 	New value PACKAGE_PLUGIN_DIR.
 
